# unity_plugin

./: .gitignore  LICENSE.md  README.md
plugin/: CMakeLists.txt  buildall.bat  buildall.sh  clearall.bat  clearall.sh  iOS.cmake
plugin/Source/: sample.h
plugin/cmake/: apple.cmake
plugin/objective_c/: ObjcSample.h  ObjcSample.mm  ObjectiveMathUtils.h  ObjectiveMathUtils.mm
plugin/source/: sample.cpp  sample.h
plugin/swift/: SwiftMathUtils.swift  SwiftSample.h  SwiftSample.mm
plugin/swiftDummy/: Dummy.swift
plugin/swiftResources/Editor/: SwiftPostProcessor.cs
unity_plugin/Assets/: TestPlugin.cs
unity_plugin/Plugin/: CMakeLists.txt  buildall.bat  buildall.sh
unity_plugin/Plugin/Source/: sample.cpp
unity_plugin/Plugin/cmake/: apple.cmake
unity_plugin/Plugin/objective_c/: ObjcSample.h  ObjcSample.mm  ObjectiveMathUtils.h
unity_plugin/Plugin/swift/: SwiftSample.h  SwiftSample.mm
unity_plugin/Plugin/swiftDummy/: Dummy.swift
unity_plugin/Plugin/swiftResources/Editor/: SwiftPostProcessor.cs
unity_plugin/ProjectSettings/: ProjectSettings.asset
unity_project/Assets/: MarshalingCommon.cs  TestPlugin.cs
unity_project/Assets/Scenes/: SampleScene.unity
unity_project/ProjectSettings/: ProjectSettings.asset
